some stuff, starting to do teaching

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,5 +1,5 @@
 {% include base_path %}
-
+<!-- This is the file that formats all of the info from the fields in the individual posts -->
 {% if post.header.teaser %}
   {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
 {% else %}
