--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -37,7 +37,7 @@ layout: default
         {% if page.collection == 'teaching' %}
           <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif page.collection == 'research' %}
-          <p>Research work at {{ post.venue }} with the {{ post.lab }}, {{ post.span }} </p>
+          <p>Research work at {{ page.venue }} with the {{ page.lab }}, {{ page.span }} </p>
         {% elsif page.venue and page.date %}
           <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif page.date %}
